--- a/app/src/main/res/layout/app_bar_perfil.xml
+++ b/app/src/main/res/layout/app_bar_perfil.xml
@@ -42,6 +42,14 @@
             android:layout_marginTop="17dp"
             android:text="TextView"
             android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/btn_logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_toEndOf="@+id/email"
+            android:text="Logout" />
     </RelativeLayout>
 
     <android.support.design.widget.AppBarLayout
